Begin DOM logic

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <button id="calculate">Calculate</button>
       </form>
       <!-- Calculated Amount -->
-      <div class="totalAmountDisplay">
-        <div class="totalAmountText">Total:</div>
-      </div>
+      <div class="totalAmount">Total:</div>
     </main>
   </body>
 </html>
