--- a/index.html
+++ b/index.html
@@ -3,30 +3,40 @@
   <head>
     <title>JavaScript Tip Calculator</title>
     <script src="JS/script.js" defer></script>
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <header>
-      <h1>Welcome to the JavaScript Tip Calculator</h1>
-      <h2>By: Claudio Rivera</h2>
+      <h1>JavaScript Tip Calculator</h1>
     </header>
     <main>
       <!-- Input Form -->
-      <form>
-        <!-- Sub Total Label and Text Input Box -->
-        <label for="subTotal">Sub Total: </label>
-        <input type="text" name="subTotal" id="subTotal" value="12.34" /><br />
-        <!-- Tip Amount Dropdown Menu -->
-        <label for="tipAmount">Select Tip Amount: </label>
-        <select name="tipAmount" id="tipAmount">
-          <option value="20">20%</option>
-          <option value="15">15%</option>
-          <option value="10">10%</option> </select
-        ><br />
-        <!-- Submit Button -->
-        <button id="calculate">Calculate</button>
-      </form>
+      <div class="inputForm">
+        <form>
+          <!-- Sub Total Label and Text Input Box -->
+          <label for="subTotal">Sub Total: </label>
+          <input
+            type="text"
+            name="subTotal"
+            id="subTotal"
+            value="12.34"
+          /><br />
+          <!-- Tip Amount Dropdown Menu -->
+          <label for="tipAmount">Select Tip Amount: </label>
+          <select name="tipAmount" id="tipAmount">
+            <option value="20">20%</option>
+            <option value="15">15%</option>
+            <option value="10">10%</option> </select
+          ><br />
+          <!-- Submit Button -->
+          <button id="calculate">Calculate</button>
+        </form>
+      </div>
       <!-- Calculated Amount -->
       <div class="totalAmount">Total:</div>
     </main>
+    <footer>
+      <h5>Made from scratch by Claudio Rivera.</h5>
+    </footer>
   </body>
 </html>
