Finished JS logic, TODO: styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="displayArea">
         <!-- Calculated Amount -->
         <div class="totalAmountLabel">Total:</div>
-        <div class="totalAmountResult">$0.00</div>
+        <div class="totalAmountResult"></div>
       </div>
     </main>
     <footer>
