Begin neumorphic design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>JavaScript Tip Calculator</title>
     <script src="JS/script.js" defer></script>
     <link rel="stylesheet" href="CSS/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
