--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </select>
             </div>
             <div class="buttonDisplay">
-              <button name="calculateTotalAmount">Calculate</button>
+              <button name="calculateTotalAmount">Calculate Total</button>
             </div>
           </div>
           <div class="totalAmountDisplayArea">
