--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="JS/script.js" defer></script>
     <link rel="stylesheet" href="CSS/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&family=Oswald:wght@300&family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&family=Oswald:wght@300&family=Roboto:wght@300&family=Josefin+Sans&display=swap"
       rel="stylesheet"
     />
   </head>
