More tidying, begin grid implementation for form

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   </head>
   <body>
     <main>
-      <div class="jsTipCalculatorContent">
+      <div class="jsTipCalculatorCard">
         <header>
           <h1>JavaScript Tip Calculator</h1>
         </header>
-
-        <div class="jsTipCalculatorUserInput">
+        <div class="mainDisplayArea">
           <div class="inputFormDisplayArea">
             <div class="subTotalDisplay">
               <label for="subTotal">Sub Total: </label>
@@ -31,16 +30,14 @@
               </select>
             </div>
             <div class="buttonDisplay">
-              <button name="calculateTotalAmount">Calculate Total</button>
+              <button name="calculateTotalAmount">Calculate</button>
             </div>
           </div>
           <div class="totalAmountDisplayArea">
-            <!-- Calculated Amount -->
             <div class="totalAmountLabel">Total:</div>
             <div class="totalAmountResult"></div>
           </div>
         </div>
-
         <footer>
           <h6>
             Made from scratch by Claudio Rivera during the COVID-19 epidemic in
