--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>JavaScript Tip Calculator</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="JS/script.js" defer></script>
     <link rel="stylesheet" href="CSS/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
+    <title>JavaScript Tip Calculator</title>
   </head>
   <body>
     <main>
       <div class="jsTipCalculatorCard">
-        <header>
+        <header class="fontHeaderFooter">
           <h1>JavaScript Tip Calculator</h1>
         </header>
-        <div class="mainDisplayArea">
+        <div class="mainDisplayArea fontMain">
           <div class="inputFormDisplayArea">
             <div class="subTotalDisplay">
               <label for="subTotal">Sub Total: </label>
@@ -38,7 +40,7 @@
             <div class="totalAmountResult"></div>
           </div>
         </div>
-        <footer>
+        <footer class="fontHeaderFooter">
           <h6>
             Made from scratch by Claudio Rivera during the COVID-19 epidemic in
             2020.
