Finished for now

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <main>
-      <div class="jsTipCalculatorCard">
+      <div class="jsTipCalculator">
         <header class="fontHeaderFooter">
           <h1>JavaScript Tip Calculator</h1>
         </header>
