--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="JS/script.js" defer></script>
-    <link rel="stylesheet" href="CSS/style.css" />
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Bebas+Neue&display=swap"
       rel="stylesheet"
@@ -42,8 +42,7 @@
         </div>
         <footer class="fontHeaderFooter">
           <h6>
-            Made from scratch by Claudio Rivera during the COVID-19 epidemic in
-            2020.
+            Made by Claudio Rivera while learning to code during COVID-19.
           </h6>
         </footer>
       </div>
